<resources>
    <string name="all_fields_required">Compila tutti i campi</string>
    <string name="already_registered">Hai già un account? Accedi!</string>
    <string name="blank_string">%1$s</string>
    <string name="booster_amount">%1$s</string>
    <string name="booster_already_active">Non puoi attivare nuovamente lo stesso booster mentre è già attivo</string>
    <string name="booster_description">Descrizione: %1$s</string>
    <string name="cancel">Annulla</string>
    <string name="confirm">Conferma</string>
    <string name="confirm_password">Conferma Password</string>
    <string name="confirm_purchase">Conferma acquisto</string>
    <string name="confirmation_reservation">Sei sicuro di voler eliminare questa prenotazione?</string>
    <string name="confirmation_vehicle">Sei sicuro di voler eliminare quest\'auto?</string>
    <string name="date">%1$s</string>
    <string name="distance">Distanza: %1$s</string>
...
    <string name="no_trip">Non è possibile portare a termine un viaggio con gli estremi inseriti</string>
    <string name="no_trip_done">Nessun viaggio eseguito</string>
    <string name="no_vehicles">Nessuna auto presente</string>
    <string name="no_vehicles_available">Nessuna auto disponibile</string>
    <string name="not_verified">"Account non verificato, controlla la tua casella email"</string>
    <string name="number_of_seats">La tua auto deve avere almeno un posto</string>
    <string name="ok">OK</string>
    <string name="ongoing_reservation">Non puoi eliminare questa prenotazione in quanto in corso</string>
    <string name="password">Password</string>
    <string name="password_change">Controlla la tua casella email per procedere con il cambio della password</string>
    <string name="password_length">La password deve essere di almeno 6 caratteri</string>
    <string name="passwords_not_matching">Le password non combaciano</string>
    <string name="password_reset">Reset Password</string>
...
        continuare
    </string>
    <string name="reset">Reset</string>
    <string name="reset_email_sent">Email di reset inviata</string>
    <string name="reservation_confirm">Inserisci prenotazione</string>
    <string name="reservation_date">Data</string>
    <string name="reservation_delete">Elimina prenotazione</string>
    <string name="reservation_fill">Inserisci la data e la fascia della prenotazione prima di poter selezionare un
        veicolo
    </string>
    <string name="reservation_successful">Prenotazione inserita correttamente</string>
    <string name="reservation_vehicle">Auto</string>
    <string name="reservation_zone">Fascia</string>
    <string name="rewards">Ricompense:</string>
    <string name="seats">Numero posti</string>
    <string name="success">Evviva!</string>
    <string name="success_change">Acquisto avvenuto con successo</string>
    <string name="surname">Cognome</string>
    <string name="surname_edit">Modifica il cognome</string>
    <string name="time">Durata: %1$s</string>
    <string name="time_zone">%1$s</string>
    <string name="to">A: %1$s</string>
...
    <string name="trip_cost">Costo viaggio:</string>
    <string name="trip_data">Per portare a termine il viaggio hai impiegato %1$s, percorrendo %2$s</string>
    <string name="trip_end">Punto di arrivo</string>
    <string name="trip_people">Partecipante</string>
    <string name="trip_start">Punto di partenza</string>
    <string name="vehicle">%1$s</string>
    <string name="vehicle_available">Prenotabile</string>
    <string name="vehicle_confirm">Inserisci auto</string>
    <string name="vehicle_date">Data fine disponibilità</string>
    <string name="vehicle_delete">Elimina auto</string>
    <string name="vehicle_delete_error_db">Si è verificato un errore nel tentativo di eliminare l\'auto</string>
    <string name="vehicle_delete_error_reservations">Non puoi eliminare l\'auto in quanto presenta prenotazioni attive
    </string>
...
