...
                    android:orientation="horizontal"
                    android:layout_weight="0.1"
                    android:layout_gravity="center"
                    android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/deleteVehicle"
                        android:src="@drawable/icon_edit"
                        android:background="@drawable/icon_edit"
                        android:minWidth="40dp"
                        android:maxWidth="40dp"
                        android:minHeight="40dp"
                        android:maxHeight="40dp"
...
