...
                    android:layout_width="match_parent"
                    android:id="@+id/recycleView" android:layout_marginTop="50dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addReservation"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:src="@drawable/icon_plus"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>
...
