...
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_blue">

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/delete_icon"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/icon_archive"/>
...
